    but based on syntax the min perl version was 5.5.3, and there are
    CPAN Testers passes for 5.6.2.
    Pod::Simple::TranscodeSmart requires 5.008, but it's only used by
    Pod::Simple::Transcode, and if the latter can't load
    Pod::Simple::TranscodeSmart, it loads Pod::Simple::TranscodeDumb
    (which explains the passes on 5.6.2).

    Dropped all use of "use vars", and declared all relevant package
    variables with 'our'.

2015-11-02   Marc Green <marcgreen@cpan.org>
	* Release 3.32
	Fixed failing tests on Windows. Thanks to A. Sinan Unur for the
	patch!

	Switched debugging output from STDOUT to STDERR. Should rarely be
	used, but modules that do depend on debugging output might need to
	change how they handle it. Patch from Karl Williamson (GitHub Pull
	Request #76).

	Added errata_seen() to make POD errors easily accessible. Thanks to
	Sean Zellmer for the pull request!

2015-08-23   Marc Green <marcgreen@cpan.org>
	* Release 3.31
	No changes since 3.30_1.

2015-07-19   Marc Green <marcgreen@cpan.org>
	* Release 3.30_1
	Simplified the detection of case-insensitivity in Pod::Simple::Search.

	Fixed "Use of uninitialized value $1 in lc" warning in
	Pod::Simple::Search.

	If @INC includes the current directory symbol, '.', the survey()
	method of Pod::Simple::Search no longer excludes it from its list
	of directories to search. Instead, The survey() and find() methods
	now both exclude duplicate directories from @INC (RT #102344).

	Moved source repository and updated links to new perl-pod GitHub
	organization: https://github.com/perl-pod/pod-simple.

	Improved repository links and added GitHub issue tracking link to
	the distribution metadata.

	Switched from File::Spec's catdir to catfile for path names, to
	fix failures on VMS. Also now use Unix path semantics where
	they're not required to be platform-specific. Thanks to Craig A.
	Berry for the patch (RT #105511).

	Improved the example use of the 'html_encode_chars()' method in